--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,165 @@
+/* #79098E //for radio bttns
+    #730088
+*/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto+Condensed:wght@300;400;700&display=swap');
+*{
+border: 0;
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+html{
+height: 100%;
+width: 100%;
+font-family: Roboto Condensed, sans-serif;
+font-size: 14px;
+}
+body{
+height: 100%;
+background-color: #ffffff;
+overflow: auto;
+border: 0;
+margin: 0;
+padding: 0;
+}
+
 .icon {
-    width: 2rem;
+    width: 1.5rem;
+}
+
+#sudoku-icon {
+    background: url('./img/');
+}
+
+h1 {
+    font-size: 5rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+.hidden {
+    display: none;
+}
+.flex{
+    display: flex;
+}
+
+body.dark {
+    background-color: #141b25;
+}
+
+h1.dark, h2.dark, #timer.dark, #lives.dark, #difficulty-title.dark, #theme-title.dark {
+    color: #ea80fc;
+}
+
+header {
+    text-align: center;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
+    border-bottom: 4px solid rgb(0, 74, 212);
+}
+
+#setup-game {
+    display: flex;
+    justify-content: center;
+}
+
+#setup-game > * {
+    margin-bottom: 10px;
+    padding: 50px 50px 50px 50px;
+    display: flex;
+    align-items: center;
+}
+
+button {
+    justify-self: center;
+}
+
+.radio-bttn {
+    margin-left: 10px;
+}
+
+p#timer, p#lives {
+    font-size: 3rem;
+    font-weight: 600;
+    text-align: center;
+}
+
+#game {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+#number-container {
+    
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 210px;
+    margin: 50px 0px 50px 50px;
+}
+
+#number-container > p {
+    border: 1px solid #000;
+    border-radius: 20%;
+    width: 60px;
+    height: 60px;
+    font-size: 3rem;
+    margin: 5px 5px 5px 5px;
+    text-align: center;
+}
+
+#board {
+    padding-top: 10px;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    width: 540px;
+    height: 540px;
+}
+
+.tile {
+    border: 1px solid #000;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    margin: 0px;
+    vertical-align: middle;
+    font-size: 3rem;
+}
+
+p.selected {
+    background-color: #87cefa;
+}
+
+p.incorrect {
+    color: #ff0000;
+}
+
+.rightBorder {
+    border-right: 4px solid #000;
+}
+
+.leftBorder {
+    border-left: 4px solid #000;
+}
+
+.bottomBorder {
+    border-bottom: 4px solid #000;
+}
+
+.topBorder {
+    border-top: 4px solid #000;
+}
+
+footer {
+    background-color: lightgrey;
+    text-align: center;
 }
