add method to highlight tiles
add styling and function to highlight tiles with same value than the selected one

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -138,6 +138,10 @@ p.selected {
     background-color: #87cefa;
 }
 
+p.highlighted {
+    background-color: #75b2d8;
+}
+
 p.incorrect {
     color: #ff0000;
 }
