--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,10 +27,6 @@ padding: 0;
     width: 1.5rem;
 }
 
-#sudoku-icon {
-    background: url('./img/');
-}
-
 h1 {
     font-size: 5rem;
 }
@@ -47,12 +43,73 @@ h2 {
 }
 
 body.dark {
-    background-color: #141b25;
+    background-color: /* #2c2d5c; */  #141b25;
+}
+
+header.dark {
+    border-bottom: 4px solid #8557d2;
 }
 
 h1.dark, h2.dark, #timer.dark, #lives.dark, #difficulty-title.dark, #theme-title.dark {
-    color: #ea80fc;
+    color:  #8557d2; /* #ea80fc; */
 }
+
+.custom-radio-bttn.dark {
+    border: 2px solid #7F50BB;
+}
+
+.custom-radio-bttn .checkmark.dark {
+    background-color: #592E95;
+}
+
+#radio-title.dark {
+    color: #8557d2;
+}
+
+#start-bttn.dark{
+    background-image: linear-gradient(to bottom, #9C6BE9, #774BC4); /* #C15AD4, #9A33AD); */
+    text-shadow: 1px 1px 3px #000000;
+    color: #ffffff;
+}
+
+#start-bttn.dark:hover {
+    background-image: linear-gradient(to bottom, #A372F0, #9C6BE9); /* #EA80FC, #C15AD4); */
+}
+
+p.selected.dark , p.highlighted.dark{
+    background-color: #592E95;
+}
+
+.tile.dark {
+    color: #A4ABBD;
+    border: 1px solid #404756;
+}
+
+p.dark.incorrect {
+    color: #C6462D;
+}
+
+#number-container.dark > p {
+    border: 2px solid #404756;
+    color: #A4ABBD;
+}
+
+.rightBorder.dark {
+    border-right: 4px solid #404756;
+}
+
+.leftBorder.dark {
+    border-left: 4px solid #404756;
+}
+
+.bottomBorder.dark {
+    border-bottom: 4px solid #404756;
+}
+
+.topBorder.dark {
+    border-top: 4px solid #404756;
+}
+
 
 header {
     text-align: center;
@@ -76,15 +133,72 @@ header {
 button {
     justify-self: center;
 }
+.custom-radio-bttn {
+    width: 20px;
+    height: 20px;
+    border: 2px solid rgb(32, 96, 216);
+    border-radius: 50%;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-radio-bttn .checkmark {
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
+    border-radius: 50%;
+    background-color: rgb(0, 74, 212);
+    display: inline-block;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.custom-radio-bttn input {
+    display: none;
+}
+
+.custom-radio-bttn input:checked + .checkmark {
+    opacity: 1;
+}
 
 .radio-bttn {
     margin-left: 10px;
 }
 
+#radio-title {
+    margin: 0px 0px 0px 5px;
+}
+
 p#timer, p#lives {
+    flex-direction: row;
     font-size: 3rem;
     font-weight: 600;
     text-align: center;
+}
+#trophy-div {
+    justify-content: center;
+    align-content: center;
+    margin-top: 1rem;
+    margin-bottom: -2rem;
+}
+
+#trophy-icon {
+    width: 10%;
+    text-align: center;
+}
+
+#start-bttn {
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    border-radius: 28px;
+    text-shadow: 1px 1px 3px #000000;
+    font-size: 1.2rem;
+    padding: 10px 20px 10px 20px;
+    color: #ffffff;
+}
+
+#start-bttn:hover {
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 }
 
 #game {
@@ -104,7 +218,7 @@ p#timer, p#lives {
 }
 
 #number-container > p {
-    border: 1px solid #000;
+    border: 2px solid #000;
     border-radius: 20%;
     width: 60px;
     height: 60px;
@@ -143,7 +257,7 @@ p.highlighted {
 }
 
 p.incorrect {
-    color: #ff0000;
+    color: #DC2418;
 }
 
 .rightBorder {
