--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ h2 {
 .flex{
     display: flex;
 }
-
+/* Darkmode */
 body.dark {
     background-color: /* #2c2d5c; */  #141b25;
 }
@@ -110,12 +110,125 @@ p.dark.incorrect {
     border-top: 4px solid #404756;
 }
 
+/* Rainbow mode*/
+body.rainbow {
+    height: 100%;
+    width: 100%;
+    left:0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background-size: 1800% 1800%;
+  
+  -webkit-animation: rainbow 18s ease infinite;
+  -z-animation: rainbow 18s ease infinite;
+  -o-animation: rainbow 18s ease infinite;
+    animation: rainbow 18s ease infinite;
+}
+  
+  @-webkit-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-moz-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @-o-keyframes rainbow {
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+  @keyframes rainbow { 
+      0%{background-position:0% 82%}
+      50%{background-position:100% 19%}
+      100%{background-position:0% 82%}
+  }
+
+header.rainbow {
+    border-bottom: 4px solid #8557d2;
+}
+
+h1.rainbow, h2.rainbow, #timer.rainbow, #lives.rainbow, #difficulty-title.rainbow, #theme-title.rainbow, #radio-title.rainbow {
+    color: #ffffff;
+    opacity: 0.9;
+    text-shadow: 0 0 2px #000000, 0 0 2px #000000, 0 0 2px rgba(0, 0#000000 #000000);
+}
+
+.custom-radio-bttn.rainbow {
+    border: 2px solid #7F50BB;
+}
+
+.custom-radio-bttn .checkmark.rainbow {
+    background-color: #592E95;
+}
+
+#start-bttn.rainbow{
+  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background-size: 500% 500%;
+  
+  -webkit-animation: rainbow 22s ease infinite;
+  -z-animation: rainbow 22s ease infinite;
+  -o-animation: rainbow 22s ease infinite;
+    animation: rainbow 22s ease infinite;
+}
+
+#start-bttn.rainbow:hover {
+    background: linear-gradient(to right, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+    background-size: 500% 500%;
+    
+    -webkit-animation: rainbow 13s ease infinite;
+    -z-animation: rainbow 13s ease infinite;
+    -o-animation: rainbow 13s ease infinite;
+      animation: rainbow 13s ease infinite;
+}
+
+p.selected.rainbow , p.highlighted.rainbow{
+    background-color: #ffffff;
+}
+
+.tile.rainbow {
+    background-color: rgba(255, 255, 255, 0.302);
+    color: #000000;
+    border: 1px solid #404756;
+}
+
+p.rainbow.incorrect {
+    color: #C6462D;
+}
+
+#number-container.rainbow > p {
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.3);
+    color: #000000;
+}
+
+.rightBorder.rainbow {
+    border-right: 4px solid rgba(255, 255, 255, 0.5);
+}
+
+.leftBorder.rainbow {
+    border-left: 4px solid rgba(255, 255, 255, 0.5);
+}
+
+.bottomBorder.rainbow {
+    border-bottom: 4px solid rgba(255, 255, 255, 0.5);
+}
+
+.topBorder.rainbow {
+    border-top: 4px solid rgba(255, 255, 255, 0.5);
+}
+
 
 header {
     text-align: center;
     padding-bottom: 10px;
     margin-bottom: 50px;
-    border-bottom: 4px solid rgb(0, 74, 212);
+    border-bottom: 4px solid #004ad4;
 }
 
 #setup-game {
